# notion-dashboard

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  Taskfile.yml
.github/workflows/: build_push_gcr.yml
migrations/: 20230726030843_pages.sql
src/: config.rs  db.rs  lib.rs  main.rs  model.rs  notion.rs
src/config/: config.rs
src/notion/: api.rs  model.rs
src/psql/: db.rs  model.rs
