[package]
name = "notion-dashboard"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
time = { version = "0.3", features = ["macros", "std"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [ "postgres", "runtime-tokio", "migrate", "time", "chrono", "json", "tls-native-tls" ] }
chrono = "0.4.26"

